Tue Nov 11 14:48:05 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile (BUNDLE_INSTALL_DIR): install bundles in
	GNUSTEP_INSTALLATION_DIR, not GNUSTEP_LOCAL_ROOT.

Tue Nov 09 10:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.hm: add ([-append:]) method to merge transactions.

Thu Oct 28 08:45:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Don't generate alert about connection with empty
	request if we have lready handled a request and reset.

Tue Oct 26 16:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: debug and duration logging should be turned off
	by default ...  a different value crept in somehow.

Sat Oct  9 14:29:35 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* SQLClient.m ([SQLClient -simpleExecute:]): Fixed logging
	durations and statements in transactions.

Thu Oct 08 10:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Add ([-quotef:,...]) to perform efficient quoting
	of a string produced using printf style format and arguments.

Thu Oct 07 10:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Optimise timing operations somewhat.

Wed Oct 06 15:04:23 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* WebServer.h: Fixed typo in parameter name.

Wed Oct 06 13:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Allow a database transaction to already have been
	begun when [SQLTransactiuon-execute] is called, so we can have
	queries in the same database transaction as a list of statements.

Wed Oct 06 06:15:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Make the rollback opoeration a safe no-op if
	there is no transaction in progress.
	* Postgres.m: Improve exception text by reporting the offending
	SQL statement(s).

Fri Sep 17 16:55:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: When reporting the duration of a commit or
	rollback, report text of all the statements in the transaction.
